2000-05-10  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine/GNCId.c (xaccRemoveEntity): don't allow the NULL id
	to be removed.

	* src/scm: remove some old, unused files.

	* src/register/splitreg.c (configLayout): swap mirrored xfer from
	and xfer to field in the transaction line of the ledgers.

2000-05-09  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/dialog-add.c (gnc_ui_accWindow_create_account): insert
	the account *after* setting the account values so the sort order
	is correct.

	* src/engine/Account.c (xaccAccountInsertSplit): check the currency
	before inserting.

2000-05-08  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine/GNCId.c (xaccGUIDNew): new function to generate
	IDs for gnucash. Use this, not guid_new. Also modified other
	engine files to use this function.

	* src/register/pricecell.c (COLORIZE): check for being close to
	zero before colorizing red.

	* src/scm/main.scm (gnc:main): if no filename was specified, open
	the most recent file in the history.

	* src/gnome/file-history.c (gnc_history_get_last): new function to
	return the last filename the user opened.

2000-05-08  Rob Browning  <rlb@cs.utexas.edu>

	* make-gnucash-patch.in: change gnucash.h to gnucash.c in ignores.
	Delete src/messages_i18n.h from ignores.
	Remove g-wrap files from ignores.

	* src/guile/gnucash.c.in: new file (now auto-generated)
	This and the following change fix a mutual dependency problem.

	* src/guile/gnucash.h: new file (no longer auto-generated).

	* src/Makefile.in (CLEAN_SUBDIRS): add quotes.
	(all targets): build g-wrap before guile. 

	* Makefile.init.in (VERSION): Added to fix problems with rpm spec, etc.

2000-05-08  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/register/pricecell.c: allow the cell to be blanked directly.

	* src/SplitLedger.c (xaccSRLoadRegEntry): explicitly blank the
	balance cell for the blank split.

	* src/register/splitreg.c (xaccInitSplitRegister): don't blank zeros